--- a/index.html
+++ b/index.html
@@ -4,23 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buku Panduan Umrah</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(to right, #4facfe, #00f2fe);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 350px;
+        }
+        h2 {
+            margin-bottom: 15px;
+        }
+        img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .buttons {
+            margin-top: 15px;
+        }
+        button {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 5px;
+            transition: 0.3s;
+        }
+        button:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
-
-    <div id="flipbook-container">
+    <div class="container">
         <h2>Buku Panduan Umrah</h2>
-        <img id="flipbook-image" src="" alt="Muka surat buku">
-        <p id="flipbook-text"></p>
-        
-        <div>
+        <img src="muka-surat.jpg" alt="Muka Surat Buku">
+        <div class="buttons">
             <button onclick="prevSlide()">Sebelumnya</button>
             <button onclick="playAudio()">Mainkan Audio</button>
             <button onclick="nextSlide()">Seterusnya</button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        function prevSlide() {
+            alert("Pergi ke halaman sebelumnya");
+        }
+        function playAudio() {
+            alert("Memainkan audio");
+        }
+        function nextSlide() {
+            alert("Pergi ke halaman seterusnya");
+        }
+    </script>
 </body>
 </html>
 
