--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buku Panduan Umrah</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -15,24 +17,24 @@
             height: 100vh;
             margin: 0;
         }
-        .container {
+        .flipbook {
+            width: 600px;
+            height: 400px;
+        }
+        .page {
+            width: 300px;
+            height: 400px;
             background: white;
-            padding: 20px;
-            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            font-weight: bold;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 350px;
-        }
-        h2 {
-            margin-bottom: 15px;
-        }
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
         }
         .buttons {
             margin-top: 15px;
+            text-align: center;
         }
         button {
             background: #007bff;
@@ -50,25 +52,33 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Buku Panduan Umrah</h2>
-        <img src="muka-surat.jpg" alt="Muka Surat Buku">
+    <div>
+        <div id="flipbook" class="flipbook">
+            <div class="page">Halaman 1</div>
+            <div class="page">Halaman 2</div>
+            <div class="page">Halaman 3</div>
+            <div class="page">Halaman 4</div>
+        </div>
         <div class="buttons">
-            <button onclick="prevSlide()">Sebelumnya</button>
-            <button onclick="playAudio()">Mainkan Audio</button>
-            <button onclick="nextSlide()">Seterusnya</button>
+            <button onclick="prevPage()">Sebelumnya</button>
+            <button onclick="nextPage()">Seterusnya</button>
         </div>
     </div>
-
     <script>
-        function prevSlide() {
-            alert("Pergi ke halaman sebelumnya");
+        $(document).ready(function() {
+            $("#flipbook").turn({
+                width: 600,
+                height: 400,
+                autoCenter: true
+            });
+        });
+
+        function prevPage() {
+            $("#flipbook").turn("previous");
         }
-        function playAudio() {
-            alert("Memainkan audio");
-        }
-        function nextSlide() {
-            alert("Pergi ke halaman seterusnya");
+
+        function nextPage() {
+            $("#flipbook").turn("next");
         }
     </script>
 </body>
