--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buku Panduan Umrah</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>Flipbook Umrah</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
     <style>
         body {
@@ -29,57 +29,26 @@
             justify-content: center;
             align-items: center;
             font-size: 20px;
-            font-weight: bold;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .buttons {
-            margin-top: 15px;
-            text-align: center;
-        }
-        button {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 5px;
-            transition: 0.3s;
-        }
-        button:hover {
-            background: #0056b3;
+            border: 1px solid #ccc;
         }
     </style>
 </head>
 <body>
-    <div>
-        <div id="flipbook" class="flipbook">
-            <div class="page">Halaman 1</div>
-            <div class="page">Halaman 2</div>
-            <div class="page">Halaman 3</div>
-            <div class="page">Halaman 4</div>
-        </div>
-        <div class="buttons">
-            <button onclick="prevPage()">Sebelumnya</button>
-            <button onclick="nextPage()">Seterusnya</button>
-        </div>
+    <div class="flipbook">
+        <div class="page">Halaman 1</div>
+        <div class="page">Halaman 2</div>
+        <div class="page">Halaman 3</div>
+        <div class="page">Halaman 4</div>
     </div>
+
     <script>
         $(document).ready(function() {
-            $("#flipbook").turn({
+            $('.flipbook').turn({
                 width: 600,
                 height: 400,
                 autoCenter: true
             });
         });
-
-        function prevPage() {
-            $("#flipbook").turn("previous");
-        }
-
-        function nextPage() {
-            $("#flipbook").turn("next");
-        }
     </script>
 </body>
 </html>
