--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flipbook Umrah</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <title>Buku Panduan Umrah</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
     <style>
         body {
@@ -17,33 +17,42 @@
             height: 100vh;
             margin: 0;
         }
-        .flipbook {
+        .book-container {
             width: 600px;
             height: 400px;
+            background: white;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        .flipbook {
+            width: 100%;
+            height: 100%;
         }
         .page {
-            width: 300px;
-            height: 400px;
-            background: white;
+            width: 100%;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 20px;
-            border: 1px solid #ccc;
+            font-weight: bold;
+            background: white;
+            border: 1px solid #ddd;
         }
     </style>
 </head>
 <body>
-    <div class="flipbook">
-        <div class="page">Halaman 1</div>
-        <div class="page">Halaman 2</div>
-        <div class="page">Halaman 3</div>
-        <div class="page">Halaman 4</div>
+    <div class="book-container">
+        <div id="flipbook" class="flipbook">
+            <div class="page">Halaman 1</div>
+            <div class="page">Halaman 2</div>
+            <div class="page">Halaman 3</div>
+            <div class="page">Halaman 4</div>
+        </div>
     </div>
-
+    
     <script>
         $(document).ready(function() {
-            $('.flipbook').turn({
+            $("#flipbook").turn({
                 width: 600,
                 height: 400,
                 autoCenter: true
