--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buku Panduan Umrah</title>
+    
+    <!-- Panggil Font & CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -17,48 +17,57 @@
             height: 100vh;
             margin: 0;
         }
-        .book-container {
-            width: 600px;
-            height: 400px;
+        .container {
+            width: 800px;
+            height: 600px;
             background: white;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
         }
-        .flipbook {
+        #flipbook {
             width: 100%;
             height: 100%;
         }
         .page {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
+            width: 400px;
+            height: 600px;
+            text-align: center;
+            line-height: 600px;
+            font-size: 24px;
             font-weight: bold;
+            color: black;
             background: white;
-            border: 1px solid #ddd;
+            border: 1px solid #ccc;
         }
     </style>
+
+    <!-- Panggil jQuery & Turn.js dari CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://www.turnjs.com/lib/turn.min.js"></script>
 </head>
 <body>
-    <div class="book-container">
-        <div id="flipbook" class="flipbook">
+
+    <div class="container">
+        <div id="flipbook">
             <div class="page">Halaman 1</div>
             <div class="page">Halaman 2</div>
             <div class="page">Halaman 3</div>
             <div class="page">Halaman 4</div>
         </div>
     </div>
-    
+
+    <!-- Panggil Turn.js untuk fungsikan Flipbook -->
     <script>
         $(document).ready(function() {
             $("#flipbook").turn({
-                width: 600,
-                height: 400,
+                width: 800,
+                height: 600,
                 autoCenter: true
             });
         });
     </script>
+
 </body>
 </html>
 
