--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
         .page {
             width: 400px;
             height: 600px;
-            text-align: center;
-            line-height: 600px;
-            font-size: 24px;
-            font-weight: bold;
-            color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background: white;
             border: 1px solid #ccc;
+        }
+        .page img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
         }
     </style>
 
@@ -50,10 +53,10 @@
 
     <div class="container">
         <div id="flipbook">
-            <div class="page">Halaman 1</div>
-            <div class="page">Halaman 2</div>
-            <div class="page">Halaman 3</div>
-            <div class="page">Halaman 4</div>
+            <div class="page"><img src="gambar1.png" alt="Halaman 1"></div>
+            <div class="page"><img src="gambar2.png" alt="Halaman 2"></div>
+            <div class="page"><img src="gambar3.jpg" alt="Halaman 3"></div>
+            <div class="page"><img src="gambar4.jpg" alt="Halaman 4"></div>
         </div>
     </div>
 
