--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div id="flipbook">
             <div class="page"><img src="image.png" alt="Halaman 1"></div>
             <div class="page"><img src="image1.png" alt="Halaman 2"></div>
-            <div class="page"><img src="gambar3.jpg" alt="Halaman 3"></div>
-            <div class="page"><img src="gambar4.jpg" alt="Halaman 4"></div>
+            <div class="page"><img src="image.png" alt="Halaman 3"></div>
+            <div class="page"><img src="image1.png" alt="Halaman 4"></div>
         </div>
     </div>
 
