--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
     <div class="container">
         <div class="slide" id="slide1">
             <h2>Halaman 1</h2>
-            <img src="halaman1.jpg" alt="Halaman 1">
+            <img src="image.png" alt="Halaman 1">
         </div>
         <div class="slide" id="slide2">
             <h2>Halaman 2</h2>
-            <img src="halaman2.jpg" alt="Halaman 2">
+            <img src="image1.png" alt="Halaman 2">
         </div>
         <div class="slide" id="slide3">
             <h2>Halaman 3</h2>
-            <img src="halaman3.jpg" alt="Halaman 3">
+            <img src="image.png" alt="Halaman 3">
         </div>
         
         <div class="buttons">
