--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <div class="container">
         <h2 id="page-title">Halaman 1</h2>
         <img id="book-image" src="image.png" alt="Halaman 1">
+        <h2 id="page-title">Halaman 2</h2>
+        <img id="book-image" src="image1.png" alt="Halaman 2">
+        <h2 id="page-title">Halaman 3</h2>
+        <img id="book-image" src="image.png" alt="Halaman 3">
         <div class="buttons">
             <button onclick="prevPage()">Sebelumnya</button>
             <button onclick="nextPage()">Seterusnya</button>
